# fmdig

./: .gitignore  CLAUDE.md  README.md  SKILL.md  fmdig.py  pyproject.toml
.zed/: settings.json
tests/: test_fmdig.py
